<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iResponse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="message">消息</string>
	<string name="course">教学</string>
	<string name="teach">课程</string>
	<string name="myself">我</string>
	<string name="fanhui">返回</string>
	<string name="next">完成</string>
	<string name="superAdmistor">管理员</string>
	<string name="teacher">教师</string>
	<string name="school">学校</string>
	<string name="eMail">邮箱</string>
	<string name="phone">手机</string>
	<string name="name">姓名</string>
	<string name="college">学院</string>
	<string name="identity">身份证</string>
	<string name="exit">注销</string>
	<string name="more">更多</string>
</resources>
