<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:orientation="horizontal"
        android:weightSum="8" >

        <Button
            android:id="@+id/button_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fanhui" />

        <TextView
            android:id="@+id/textView_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#ffffff" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_superAdmistor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/superAdmistor" />

            <RadioButton
                android:id="@+id/radio_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher" />
    
        </RadioGroup>

    </LinearLayout>

	<LinearLayout     
	    android:orientation="vertical"
	    android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">	
      
	</LinearLayout>

</LinearLayout>    