<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    tools:context="com.dachuang.iresponse.Login"
    android:gravity="center" >

    
    <LinearLayout 
        android:id="@+id/Line1"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center">   
         
  <!--  <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:text="@string/username" />
    
    <AutoCompleteTextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"     
        android:ems="10"
        android:hint="username"
        android:completionThreshold="3" />

  -->
  		<EditText 
  		    android:layout_width="200dp"
  		    android:id="@+id/editText1"
  		    android:layout_height="40dp"
  		    android:drawableLeft="@drawable/iconic"
  		    android:drawablePadding="15dp"
  		    android:hint="@string/username"
  		    android:inputType="text"
  		    android:textSize="13sp"
  		    android:textColorHint="#000000"
  		    />
    </LinearLayout>
    
    
   

      
    
   <LinearLayout 
        android:id="@+id/Line2"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_below="@id/Line1"
        android:layout_marginTop="20dp">
    <EditText 
  		    android:layout_width="200dp"
  		    android:id="@+id/editText2"
  		    android:layout_height="40dp"
  		    android:drawableLeft="@drawable/iconic"
  		    android:drawablePadding="15dp"
  		    android:hint="@string/password"
  		    android:inputType="textPassword"
  		    android:textSize="13sp"
  		    android:textColorHint="#000000"
  		    />


    </LinearLayout>
  
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_below="@id/Line2"
        android:layout_marginTop="20dp">
    
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/mybutton" />
    
	       <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/register" 
	        android:background="@drawable/mybutton"/>
       
 	</LinearLayout>
</RelativeLayout>